data/derived/fa15/progs/unify/prog0959.ml.out
Characters 8-19:
  let _ = digitsOfInt -293;;
          ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
